--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">finalProjectMad310</string>
-    <string name="link">https://api.myjson.com/bins/cojwb</string>
+    <string name="link">https://api.myjson.com/bins/1azz7f</string>
 
 </resources>
